--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,10 @@ a {
     margin-bottom:13px;
     
 }
+.flink{
+    display: flex;
+    justify-content: center;
+}
 .mail{
     width: 200px;
     padding:14px 41px 14px 16px;
@@ -386,6 +390,22 @@ a {
     border-color:#F33C3C ;
 }
 
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 111;
+    display: none;
+}
+
+.modal-content {
+    width: 400px;
+    margin: 150px auto 0;
+    background-color: #fff;
+}
 
 
 
