--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ a {
 .column3{
     width: 33.3%;
 }
-.main-toggle{
+.menu-toggle{
     display: none;
 }
 
@@ -118,6 +118,9 @@ a {
     padding-bottom:16px;
  
 
+}
+.mob-img{
+    display: none;
 }
 .page-text{
     font-size: 16px;
